# RayTracer

./: .gitignore  CMakeLists.txt  README.md  bootstrap.bat  bootstrap.sh
src/: Main.cpp
